<resources>
    <string name="app_name">Simple News Reader</string>
    <string name="action_settings">Settings</string>
    <string name="button_news_feed">News Feed</string>
    <string name="button_news_cat">Categories</string>
    <string name="selected">Subscriptions</string>
    <string name="button_add_cat">Add News Source</string>
    <string name="text_empty_newsfeed">Your news feed is empty.\n\nTo add articles,
        add a news source using the \'Manage Subscriptions\' button.</string>
    <string name="empty_subscriptions">You\'re not subscribed to a news source.\n\nAdd a news source
    using the \'Manage Subscriptions\' button.</string>

    <!-- Strings related to the Info Activity -->
    <!-- Labels -->
    <string name="about">About</string>
    <string name="about_label_0">Information</string>
    <string name="about_label_1">Instructions</string>
    <string name="about_label_2">Acknowledgements</string>
    <string name="about_label_3">New Technologies</string>
    <!-- Description and Resources -->
    <string name="about_text">This android application parses RSS feeds and displays the contents
    into an easy to read and unified place.\n\nCreated by: Benjamin Glover (3/10/2016)
    </string>
    <string name="about_text_1">Add a new source of information from either a
        provided sample of RSS feeds or enter your own by pressing the "Add Category" button.\n
        After a new source is entered into the list, press the back button to return to the News Feed.\n
        There, the articles will populate and able to be clicked and view.\n\nEnjoy your readings!</string>
    <string name="about_text_2">
        Shared Preference \n
         https://androidresearch.wordpress.com/2012/03/31/writing-and-reading-from-sharedpreferences/
 \n\n
        Toolbar \n
        https://www.codeofaninja.com/2014/02/android-navigation-drawer-example.html\n\n
        Navigation Menu\n
        http://developer.android.com/intl/zh-tw/training/implementing-navigation/nav-drawer.html#DrawerLayout
    </string>
    <string name="about_text_3">Toolbar\nShared Preferences to remember if the user is currently logged in.
        \nSettings\nNavigation Menu on the News Feed Actitivy slides out.</string>

    <!-- Strings Related to Activities-->
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="article_img">Article Picture</string>
    <string name="download_text">Your articles are currently downloading.</string>
    <string name="download_text2">Your favorites are currently downloading.</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="info_button_context">Info Button</string>
    <string name="title_activity_launch_page">LaunchPage</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to Navigation Bar -->
    <string name="nav_button">Navigation Button</string>
    <string name="version">Version: 3.0 Pre-Alpha</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to Register Activity -->
    <string name="title_activity_register">Register</string>
    <string name="user_email_hint">Email</string>
    <string name="user_passord_hint">Password</string>
    <string name="user_confirm_hint">Confirm Password</string>
    <string name="user_fname_hint">First Name</string>
    <string name="user_lname_hint">Last Name</string>
    <string name="new_user_title">Welcome New User!</string>
    <string name="register">Register</string>
    <string name="prompt_notice">Note: \nPasswords are not encrypted and are stored in plain text.
    \nPlease do not use your daily used passwords.\nExample Passwords: tigers, clemson, or password
    </string>
    <!--- Strings for Register Dialog -->
    <string name="registration_title">Register New User</string>
    <string name="registration_prompt">It seems like you don\'t have an account for this email
    address.\n\nWould you like to register for one?</string>
    <string name="nav_fname">Barack</string>
    <string name="nav_lname">Obama</string>
    <string name="hello">Hello, </string>
    <string name="title_activity_settings">Settings</string>


    <string name="article_fav_button">Favorite Button</string>
    <string name="article_title">Title</string>
    <string name="fav_articles_title">Favorites</string>
    <string name="settings_title">Settings</string>
    <string name="empty_favorites">No favorites</string>
    <string name="logout_button">Log Out</string>
</resources>