<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_label_1"
                android:id="@+id/textView7"
                android:layout_marginTop="18dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:id="@+id/textView3"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_label_0"
                android:id="@+id/textView6"
                android:layout_marginTop="28dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text_1"
                android:id="@+id/textView4"
                android:layout_marginTop="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_label_2"
                android:id="@+id/textView8"
                android:layout_marginTop="33dp"
                android:layout_below="@+id/textView4"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text_2"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView8"
                android:layout_toRightOf="@+id/scrollView"
                android:layout_toEndOf="@+id/scrollView"
                android:linksClickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_label_3"
                android:id="@+id/textView9"
                android:layout_below="@+id/textView5"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignStart="@+id/textView8"
                android:layout_marginTop="37dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text_3"
                android:id="@+id/textView10"
                android:layout_marginTop="37dp"
                android:layout_below="@+id/textView9"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
