<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:id="@+id/navigation_header"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:background="#00ffffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionGroup="false"
        android:id="@+id/nav_name"
        android:touchscreenBlocksFocus="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/navigation_header"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:id="@+id/nav_greating"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_fname"
            android:id="@+id/nav_fname"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_lname"
            android:id="@+id/nav_lname"
            android:layout_marginLeft="5dp"
            android:textAlignment="center"
            android:textColor="#000000" />
    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d9d9d9"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="20dp"
        android:drawSelectorOnTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:textAlignment="center"
        android:transitionGroup="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/nav_name"
        android:layout_above="@+id/nav_version" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/version"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/nav_version"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:background="#00ffffff"
        android:layout_marginTop="10dp" />
</RelativeLayout>