<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:elevation="7dp"
    android:background="@android:color/background_light"
    >
    <!-- Main Content -->
    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="#4052b5">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#4052b5"
            android:layout_below="@+id/toolbar"
            android:id="@+id/relativeLayout"
            android:layout_alignParentBottom="true">

            <ListView
                android:id="@+id/newsFeedView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:background="#4052b5"
                android:divider="@android:color/transparent"
                android:dividerHeight="15.0dp"
                android:layout_alignParentEnd="true" >

            </ListView>

        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_news_feed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignTop="@+id/toolbar"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoButton"
            android:src="@android:drawable/ic_menu_info_details"
            android:contentDescription="@string/info_button_context"
            android:background="#00ffffff"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignRight="@+id/toolbar"
            android:layout_alignEnd="@+id/toolbar" />

        <Button
            android:id="@+id/buttonAddCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/manage_subscriptions"
            android:visibility="invisible" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emptyNewsFeed"
            android:text="@string/text_empty_newsfeed"
            android:textStyle="bold"
            android:textAlignment="center"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/download_text"
            android:id="@+id/downloadingText"
            android:layout_marginTop="72dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menuButton"
            android:contentDescription="@string/nav_button"
            android:src="@drawable/ic_reorder_black_24dp"
            android:background="#00ffffff"
            android:layout_alignBottom="@+id/infoButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <!-- Sliding Navigation Bar -->
    <RelativeLayout
        android:id="@+id/slidermenu"
        android:orientation="vertical"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/material_grey_50">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:layout_alignParentLeft="true"
            android:id="@+id/appinfo"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:background="#00ffffff"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:layout_marginTop="15dp" />
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#d9d9d9"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="20dp"
        android:drawSelectorOnTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/verision"
        android:textAlignment="center"
        android:transitionGroup="true"
        android:layout_below="@+id/appinfo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/version"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/verision"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:background="#00ffffff" />
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
